Fixed scroll issues and stylled scrollbars.

--- a/app/styles/_widgets.scss
+++ b/app/styles/_widgets.scss
@@ -85,8 +85,8 @@ a, a:hover, a:visited {
   }
 }
 
-.font{
-	background: #fafafa;
+.front{
+  overflow: auto;
 }
 
 .back{
@@ -299,6 +299,23 @@ handle, .clickable{
 .fa-star.clickable{
   &:hover{ color: $link-color;}
   &.selected{ color: $link-hover-color; }
+}
+
+
+/* scroll bars stylling */
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+ 
+::-webkit-scrollbar-track {
+  background-color: rgba(0,0,0,0.1); 
+  border-radius: 5px;
+}
+ 
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: rgba(0,0,0,0.2); 
 }
 
 
